// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SaveAssessmentDialogSettings renders with enabled = false 1`] = `
<GenericToggle
  description="Show save assessment dialog."
  enabled={false}
  id="enable-save-assessment-dialog"
  name="Enable save assessment dialog"
  onClick={[Function]}
/>
`;

exports[`SaveAssessmentDialogSettings renders with enabled = true 1`] = `
<GenericToggle
  description="Show save assessment dialog."
  enabled={true}
  id="enable-save-assessment-dialog"
  name="Enable save assessment dialog"
  onClick={[Function]}
/>
`;
